--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -6589,9 +6589,6 @@ p, li { white-space: pre-wrap; }
         <string>Segmentation</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_seg_tab" columnstretch="5,1,2">
-        <item row="1" column="1">
-         <widget class="QComboBox" name="segSelectView"/>
-        </item>
         <item row="0" column="0" colspan="2">
          <widget class="QWidget" name="VTK_SegView" native="true"/>
         </item>
@@ -6601,6 +6598,9 @@ p, li { white-space: pre-wrap; }
            <enum>Qt::Horizontal</enum>
           </property>
          </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="segSelectView"/>
         </item>
         <item row="0" column="2">
          <widget class="QToolBox" name="seg_toolBox">
@@ -6615,14 +6615,14 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>387</width>
-             <height>918</height>
+             <width>389</width>
+             <height>952</height>
             </rect>
            </property>
            <attribute name="label">
             <string>Thresholding</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_segTools" columnstretch="0,0">
+           <layout class="QGridLayout" name="gridLayout_segTools" rowstretch="1,0,0,1,1,1,3" columnstretch="0,0">
             <item row="3" column="1">
              <widget class="QSlider" name="threshMinSlider">
               <property name="minimum">
@@ -6640,25 +6640,6 @@ p, li { white-space: pre-wrap; }
               <property name="tickPosition">
                <enum>QSlider::NoTicks</enum>
               </property>
-             </widget>
-            </item>
-            <item row="0" column="0" colspan="2">
-             <widget class="QWidget" name="VTK_SegHistView" native="true">
-              <layout class="QGridLayout" name="gridLayout_49">
-               <item row="0" column="0">
-                <spacer name="spacer_seg1">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>397</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-              </layout>
              </widget>
             </item>
             <item row="3" column="0">
@@ -6729,6 +6710,25 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
+            <item row="0" column="0" rowspan="3" colspan="2">
+             <widget class="QWidget" name="VTK_SegHistView" native="true">
+              <layout class="QGridLayout" name="gridLayout_49">
+               <item row="0" column="0">
+                <spacer name="spacer_seg1">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>397</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+              </layout>
+             </widget>
+            </item>
            </layout>
           </widget>
           <widget class="QWidget" name="seg_toolBoxPage2">
@@ -6736,42 +6736,15 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>231</width>
-             <height>88</height>
+             <width>389</width>
+             <height>952</height>
             </rect>
            </property>
            <attribute name="label">
             <string>Manual edits</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_48">
-            <item row="0" column="4">
-             <widget class="QLineEdit" name="segEraseBox">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Eraser</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="3">
-             <widget class="QToolButton" name="segEraseButton">
-              <property name="text">
-               <string>...</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>../Downloads/eraser.png</normaloff>../Downloads/eraser.png</iconset>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="0">
+           <layout class="QGridLayout" name="gridLayout_48" columnstretch="0,1,0,0">
+            <item row="3" column="0">
              <widget class="QToolButton" name="segEllipseButton">
               <property name="text">
                <string>...</string>
@@ -6782,44 +6755,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="1" column="2">
-             <widget class="QLineEdit" name="segEllipseBox">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="text">
-               <string>Ellipse</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="2">
-             <widget class="QLineEdit" name="segBrushBox">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Brush</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0">
-             <widget class="QToolButton" name="segBrushButton">
-              <property name="text">
-               <string>...</string>
-              </property>
-              <property name="icon">
-               <iconset>
-                <normaloff>../Downloads/brush.png</normaloff>../Downloads/brush.png</iconset>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
+            <item row="4" column="0">
              <spacer name="spacer_seg3">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -6832,6 +6768,111 @@ p, li { white-space: pre-wrap; }
               </property>
              </spacer>
             </item>
+            <item row="3" column="1">
+             <widget class="QLineEdit" name="segEllipseBox">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Ellipse</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="4">
+             <widget class="QGroupBox" name="groupBox_SegEditDraw">
+              <property name="title">
+               <string>Drawing</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_SegEditDraw" columnstretch="1,1,1,1">
+               <item row="1" column="0" colspan="3">
+                <widget class="QSlider" name="BrushSizeSlider">
+                 <property name="minimum">
+                  <number>1</number>
+                 </property>
+                 <property name="maximum">
+                  <number>50</number>
+                 </property>
+                 <property name="value">
+                  <number>5</number>
+                 </property>
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0">
+                <widget class="QToolButton" name="segBrushButton">
+                 <property name="text">
+                  <string>Brush</string>
+                 </property>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>../Downloads/brush.png</normaloff>../Downloads/brush.png</iconset>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1">
+                <widget class="QLineEdit" name="segBrushBox">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="text">
+                  <string>Brush</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="2">
+                <widget class="QToolButton" name="segEraseButton">
+                 <property name="text">
+                  <string>Eraser</string>
+                 </property>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>../Downloads/eraser.png</normaloff>../Downloads/eraser.png</iconset>
+                 </property>
+                 <property name="checkable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="3">
+                <widget class="QLineEdit" name="segEraseBox">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="text">
+                  <string>Eraser</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="3">
+                <widget class="QLineEdit" name="BrushSizeText">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="text">
+                  <string>Brush size</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
            </layout>
           </widget>
           <widget class="QWidget" name="seg_toolBoxPage5">
@@ -6839,8 +6880,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>98</width>
-             <height>28</height>
+             <width>100</width>
+             <height>30</height>
             </rect>
            </property>
            <attribute name="label">
