--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -7369,93 +7369,11 @@ p, li { white-space: pre-wrap; }
        <attribute name="title">
         <string>Segmentation</string>
        </attribute>
-       <layout class="QGridLayout" name="gridLayout_seg_tab" rowstretch="1,0,0,0,0,2,0" columnstretch="4,1,1,2">
-        <item row="0" column="0" rowspan="6" colspan="2">
-         <widget class="QWidget" name="VTK_SegView" native="true"/>
-        </item>
-        <item row="2" column="3">
-         <widget class="QSlider" name="threshMaxSlider">
-          <property name="minimum">
-           <number>-1024</number>
-          </property>
-          <property name="maximum">
-           <number>3000</number>
-          </property>
-          <property name="value">
-           <number>150</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="0">
-         <widget class="QSlider" name="segViewSlider">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2" colspan="2">
-         <widget class="QWidget" name="VTK_SegHistView" native="true">
-          <layout class="QGridLayout" name="gridLayout_49"/>
-         </widget>
-        </item>
-        <item row="3" column="2">
-         <widget class="QLineEdit" name="lineEdit_createStructureSeg">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="text">
-           <string>Structure name</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="1">
-         <widget class="QComboBox" name="segSelectView"/>
-        </item>
-        <item row="3" column="3">
-         <widget class="QLineEdit" name="segStructureName"/>
-        </item>
-        <item row="4" column="3">
+       <layout class="QGridLayout" name="gridLayout_seg_tab" rowstretch="1,0,0,0,0,2,0" columnstretch="4,1,0,0,1,1">
+        <item row="4" column="4">
          <widget class="QPushButton" name="createSegStructure">
           <property name="text">
            <string>Create structure</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="3">
-         <widget class="QSlider" name="threshMinSlider">
-          <property name="minimum">
-           <number>-1024</number>
-          </property>
-          <property name="maximum">
-           <number>3000</number>
-          </property>
-          <property name="value">
-           <number>-200</number>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="tickPosition">
-           <enum>QSlider::NoTicks</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="2">
-         <widget class="QLineEdit" name="threshMaxBox">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string>Min. HU threshold: 200 </string>
           </property>
          </widget>
         </item>
@@ -7471,11 +7389,11 @@ p, li { white-space: pre-wrap; }
            </sizepolicy>
           </property>
           <property name="text">
-           <string>Min. HU threshold: -200 </string>
+           <string>Min. HU threshold</string>
           </property>
          </widget>
         </item>
-        <item row="5" column="2" rowspan="2" colspan="2">
+        <item row="5" column="2" rowspan="2" colspan="4">
          <widget class="QToolBox" name="seg_toolBox">
           <property name="autoFillBackground">
            <bool>false</bool>
@@ -7483,54 +7401,13 @@ p, li { white-space: pre-wrap; }
           <property name="frameShadow">
            <enum>QFrame::Plain</enum>
           </property>
-          <widget class="QWidget" name="seg_toolBoxPage1">
-           <property name="geometry">
-            <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>114</width>
-             <height>48</height>
-            </rect>
-           </property>
-           <attribute name="label">
-            <string>Thresholding</string>
-           </attribute>
-           <layout class="QGridLayout" name="gridLayout_segTools" rowstretch="1,0,0,1,1,1,3" columnstretch="0,0">
-            <item row="0" column="1">
-             <widget class="QPushButton" name="applyThreshSeg">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Apply threshold</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="1" rowspan="4">
-             <spacer name="spacer_seg2">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </widget>
           <widget class="QWidget" name="seg_toolBoxPage2">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>263</width>
-             <height>194</height>
+             <width>587</width>
+             <height>553</height>
             </rect>
            </property>
            <attribute name="label">
@@ -7675,13 +7552,54 @@ p, li { white-space: pre-wrap; }
             </item>
            </layout>
           </widget>
+          <widget class="QWidget" name="seg_toolBoxPage1">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>587</width>
+             <height>553</height>
+            </rect>
+           </property>
+           <attribute name="label">
+            <string>Thresholding</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_segTools" rowstretch="1,0,0,1,1,1,3" columnstretch="0,0">
+            <item row="0" column="1">
+             <widget class="QPushButton" name="applyThreshSeg">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="text">
+               <string>Apply threshold</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1" rowspan="4">
+             <spacer name="spacer_seg2">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </widget>
           <widget class="QWidget" name="seg_toolBoxPage5">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>234</width>
-             <height>149</height>
+             <width>206</width>
+             <height>147</height>
             </rect>
            </property>
            <attribute name="label">
@@ -7716,13 +7634,122 @@ p, li { white-space: pre-wrap; }
           </widget>
          </widget>
         </item>
-        <item row="4" column="2">
+        <item row="1" column="4" colspan="2">
+         <widget class="QSlider" name="threshMinSlider">
+          <property name="minimum">
+           <number>-1024</number>
+          </property>
+          <property name="maximum">
+           <number>3000</number>
+          </property>
+          <property name="value">
+           <number>-200</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="tickPosition">
+           <enum>QSlider::NoTicks</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QLineEdit" name="threshMaxBox">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string>Max. HU threshold</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="4" colspan="2">
+         <widget class="QSlider" name="threshMaxSlider">
+          <property name="minimum">
+           <number>-1024</number>
+          </property>
+          <property name="maximum">
+           <number>3000</number>
+          </property>
+          <property name="value">
+           <number>150</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QSlider" name="segViewSlider">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="5">
+         <widget class="QPushButton" name="deleteSegStructure">
+          <property name="text">
+           <string>Delete structure</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QComboBox" name="segSelectView"/>
+        </item>
+        <item row="0" column="0" rowspan="6" colspan="2">
+         <widget class="QWidget" name="VTK_SegView" native="true"/>
+        </item>
+        <item row="0" column="2" colspan="4">
+         <widget class="QWidget" name="VTK_SegHistView" native="true">
+          <layout class="QGridLayout" name="gridLayout_49"/>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QSpinBox" name="segThreshMinHU">
+          <property name="minimum">
+           <number>-1024</number>
+          </property>
+          <property name="maximum">
+           <number>3072</number>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="3">
+         <widget class="QSpinBox" name="segThreshMaxHU">
+          <property name="minimum">
+           <number>-1024</number>
+          </property>
+          <property name="maximum">
+           <number>3072</number>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="2" colspan="2">
          <widget class="QCheckBox" name="initStrucCheck">
           <property name="layoutDirection">
            <enum>Qt::RightToLeft</enum>
           </property>
           <property name="text">
            <string>All series</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="4" colspan="2">
+         <widget class="QLineEdit" name="segStructureName"/>
+        </item>
+        <item row="3" column="2" colspan="2">
+         <widget class="QLineEdit" name="lineEdit_createStructureSeg">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Structure name</string>
           </property>
          </widget>
         </item>
