--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -2830,7 +2830,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="Plan_tabs">
           <property name="currentIndex">
-           <number>3</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Brachy_plan_tab">
            <attribute name="title">
@@ -4575,7 +4575,7 @@
            </attribute>
            <layout class="QGridLayout" name="gridLayout_59" columnstretch="1,2,1">
             <item row="0" column="0">
-             <layout class="QGridLayout" name="plan_eval_grid_left" columnstretch="1,2,2">
+             <layout class="QGridLayout" name="plan_eval_grid_left" columnstretch="3,1,3">
               <item row="18" column="2">
                <widget class="QCheckBox" name="dose_unit_Gy">
                 <property name="text">
@@ -4776,57 +4776,9 @@
              </layout>
             </item>
             <item row="0" column="1">
-             <layout class="QGridLayout" name="plan_eval_grid_middle" rowstretch="0,4,4,0,0,0,0,0,0" columnstretch="1,2,1">
-              <item row="0" column="0">
-               <widget class="QLabel" name="DVHs">
-                <property name="text">
-                 <string>Dose Volume Histogram</string>
-                </property>
-               </widget>
-              </item>
-              <item row="7" column="2">
-               <widget class="QPushButton" name="button_export_dose_stats_to_excel">
-                <property name="text">
-                 <string>Export to CSV</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="0" colspan="3">
-               <widget class="QGraphicsView" name="view_dvhs"/>
-              </item>
-              <item row="5" column="2">
-               <widget class="QPushButton" name="button_delete_column">
-                <property name="text">
-                 <string>Delete column</string>
-                </property>
-               </widget>
-              </item>
-              <item row="4" column="0">
-               <widget class="Line" name="line_split_planevaluation_2">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
-                </property>
-               </widget>
-              </item>
-              <item row="6" column="0" colspan="3">
-               <widget class="QTableWidget" name="table_dose_stats"/>
-              </item>
-              <item row="5" column="0">
-               <widget class="QLabel" name="DoseStatistics">
-                <property name="text">
-                 <string>Dose Statistics </string>
-                </property>
-               </widget>
-              </item>
-              <item row="8" column="0">
-               <widget class="Line" name="verticalline_middle_grid">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
-                </property>
-               </widget>
-              </item>
-              <item row="7" column="1">
-               <spacer name="HS_9">
+             <layout class="QGridLayout" name="plan_eval_grid_middle" rowstretch="0,4,4,0,0,0,0,0,0,0" columnstretch="1,2,1,0">
+              <item row="0" column="2" colspan="2">
+               <spacer name="HS_11">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
@@ -4838,10 +4790,58 @@
                 </property>
                </spacer>
               </item>
+              <item row="5" column="0">
+               <widget class="QLabel" name="DoseStatistics">
+                <property name="text">
+                 <string>Dose Statistics </string>
+                </property>
+               </widget>
+              </item>
+              <item row="9" column="0">
+               <widget class="Line" name="verticalline_middle_grid">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+               </widget>
+              </item>
               <item row="7" column="0">
+               <widget class="QPushButton" name="button_select_all_rows_DST">
+                <property name="text">
+                 <string>Select all</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0" colspan="4">
+               <widget class="QGraphicsView" name="view_dvhs"/>
+              </item>
+              <item row="0" column="0">
+               <widget class="QLabel" name="DVHs">
+                <property name="text">
+                 <string>Dose Volume Histogram</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="0">
+               <widget class="Line" name="line_split_planevaluation_2">
+                <property name="orientation">
+                 <enum>Qt::Vertical</enum>
+                </property>
+               </widget>
+              </item>
+              <item row="8" column="0">
                <widget class="QPushButton" name="button_update_plot">
                 <property name="text">
                  <string>Plot</string>
+                </property>
+               </widget>
+              </item>
+              <item row="6" column="0" colspan="4">
+               <widget class="QTableWidget" name="table_dose_stats"/>
+              </item>
+              <item row="2" column="0" colspan="4">
+               <widget class="Line" name="line_split_planevaluation_3">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
                 </property>
                </widget>
               </item>
@@ -4858,15 +4858,15 @@
                 </property>
                </spacer>
               </item>
-              <item row="2" column="0" colspan="3">
-               <widget class="Line" name="line_split_planevaluation_3">
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
+              <item row="5" column="2" colspan="2">
+               <widget class="QPushButton" name="button_delete_column">
+                <property name="text">
+                 <string>Delete column</string>
                 </property>
                </widget>
               </item>
-              <item row="0" column="1" colspan="2">
-               <spacer name="HS_11">
+              <item row="8" column="1">
+               <spacer name="HS_9">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
@@ -4877,6 +4877,26 @@
                  </size>
                 </property>
                </spacer>
+              </item>
+              <item row="7" column="1">
+               <spacer name="HS_17">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
+              <item row="8" column="2" colspan="2">
+               <widget class="QPushButton" name="button_export_dose_stats_to_excel">
+                <property name="text">
+                 <string>Export to CSV</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
@@ -5210,6 +5230,19 @@
                    </rect>
                   </property>
                  </widget>
+                 <widget class="QPushButton" name="button_show_uncertainty_bands">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>360</y>
+                    <width>89</width>
+                    <height>28</height>
+                   </rect>
+                  </property>
+                  <property name="text">
+                   <string>Show Bands</string>
+                  </property>
+                 </widget>
                 </widget>
                 <widget class="QWidget" name="error_simulation">
                  <attribute name="title">
@@ -5217,6 +5250,26 @@
                  </attribute>
                 </widget>
                </widget>
+              </item>
+              <item row="9" column="0">
+               <widget class="QLabel" name="Deviation_Metrics">
+                <property name="text">
+                 <string>Deviation Metrics</string>
+                </property>
+               </widget>
+              </item>
+              <item row="9" column="1" colspan="3">
+               <spacer name="HS_18">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
               </item>
              </layout>
             </item>
@@ -7391,7 +7444,7 @@ p, li { white-space: pre-wrap; }
              <x>0</x>
              <y>0</y>
              <width>527</width>
-             <height>572</height>
+             <height>555</height>
             </rect>
            </property>
            <attribute name="label">
@@ -7541,8 +7594,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>101</width>
-             <height>47</height>
+             <width>114</width>
+             <height>48</height>
             </rect>
            </property>
            <attribute name="label">
@@ -7582,8 +7635,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>206</width>
-             <height>147</height>
+             <width>234</width>
+             <height>149</height>
             </rect>
            </property>
            <attribute name="label">
